WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199830
[GTK][WPE] Do not assert when receiving invalid data in injected bundle messages
https://bugs.webkit.org/show_bug.cgi?id=199830
Summary
[GTK][WPE] Do not assert when receiving invalid data in injected bundle messages
Carlos Garcia Campos
Reported
2019-07-16 08:19:43 PDT
Just silently ignore them to avoid UI process crashes.
Attachments
Patch
(1.99 KB, patch)
2019-07-16 08:20 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-07-16 08:20:50 PDT
Created
attachment 374209
[details]
Patch
EWS Watchlist
Comment 2
2019-07-16 08:23:14 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2019-07-17 01:23:32 PDT
Committed
r247507
: <
https://trac.webkit.org/changeset/247507
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug