[GTK][WPE] Do not assert when receiving invalid data in injected bundle messages https://bugs.webkit.org/show_bug.cgi?id=199830

Reviewed by Michael Catanzaro.

Just silently ignore them to avoid UI process crashes.

* UIProcess/API/glib/WebKitInjectedBundleClient.cpp:

Canonical link: https://commits.webkit.org/213729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247507 268f45cc-cd09-0410-ab3c-d52691b4dbfc